# aletheia-redteam-kit

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  OFF_PHASE_STATUS.md  PUBLIC_ROADMAP.md  README.md  SECURITY_RISK_REGISTER.md  adversarial_review.md  audit.py  custom_rules.json  enterprise_audit_report_aletheia_core_2026-05-14.md  enterprise_audit_report_aletheia_core_2026-05-16.md  goals  package-lock.json  pyproject.toml  report.md  sample_threat_feed.json  website_summary.json
.github/: ISSUES.md
attacks/: benign_controls.json  data_exfiltration.json  jailbreak.json  memory_poisoning.json  policy_evasion.json  prompt_injection.json  tool_abuse.json
dashboard/: index.html
docs/: PHASE3_SPEC.md  automated-remediation.md  command-center-data-shapes.md  command-center.md  example_openai_target_profile.json  example_runner_plugin.py  test-case-catalog-addendum-hf-breach.md  test-case-catalog-v1.md
engine/: __init__.py  adaptive_red_agent.py  agentic.py  calibration.py  ci_gates.py  context_poison_runtime.py  disagreement_metrics.py  gap_analysis.py  mutation.py  nist_export.py  remediation.py  scoring.py  semantic_drift.py  trajectory_runtime.py
examples/: threat_feed.example.json
kit/: agentic_runner.py  api_analysis.py  auth.py  campaign_planner.py  catalog.py  client.py  cloaking.py  command_center.py  dashboard_server.py  evidence.py  exit_codes.py  external_corpus.py  payload_mutation_plugin.py  payload_quality.py  plugins.py  remediation_store.py  runner.py  verify.py
runs/: agentic_smoke.json  api_full_regression.json  api_key_smoke.json  index.json  summary_api_full.json  summary_phase4.json  summary_rerun.json
scripts/: bootstrap.sh  calibrate_thresholds.py  export_nist_telemetry.py  generate_remediation.py  redteam_gate.py  run_security_gates.py  verify.sh
security/: semgrep-rules.yml  semgrep-suppressions.txt
tests/: __init__.py  runner_plugin_fixture.py  test_active_audit_engine.py  test_agentic.py  test_agentic_runner.py  test_api_regression.py  (+30 more)
(+145 files in other folders)
