[project]
name = "aletheia-redteam-kit"
version = "0.1.0"
description = "Adversarial test kit for the Aletheia AI security API"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
verify = ["cryptography>=42.0"]

[project.scripts]
aletheia-redteam = "kit.runner:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kit*"]

[tool.pytest.ini_options]
python_files = ["__init__.py", "test_*.py"]
