[project]
name = "aletheia-redteam-kit"
version = "1.2.0"
description = "Adversarial test kit for the Aletheia AI security API"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "bcrypt>=4.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "cryptography>=42.0", "semgrep>=1.0"]
verify = ["cryptography>=42.0"]
web = ["playwright>=1.53"]
deps = ["pip-audit>=2.7", "cyclonedx-bom>=4.1"]

[project.scripts]
aletheia-redteam = "kit.runner:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kit*", "engine*", "src*"]

[tool.pytest.ini_options]
python_files = ["__init__.py", "test_*.py"]
